<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clEventDetailsCoordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screen.eventcontrol.details.fragment.EventDetailsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/event_detail_backdrop_height"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/ctlEventDetailsToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            tools:title="@string/example_title_event_detail">

            <ImageView
                android:id="@+id/ivEventImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/content_description_event_image"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:src="@mipmap/ic_launcher" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tbEventDetails"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_action_arrow_back" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/cpiDetailsLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clDetailsContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvPrivateEvent"
                    style="@style/MediumSecondaryAttribute"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/secret_event_event_details"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvEventStartDateTime"
                    style="@style/HighlightedBigNormalAttribute"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvPrivateEvent"
                    tools:text="@string/example_date_time_event_details" />

                <TextView
                    android:id="@+id/tvEventPlace"
                    style="@style/BigBoldAttribute"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvEventStartDateTime"
                    tools:text="@string/example_place_event_details" />

                <TextView
                    android:id="@+id/tvEventParticipantCount"
                    style="@style/BoldHighlightedMediumAttribute"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvEventPlace"
                    tools:text="@string/example_remaining_spaces_event_details" />

                <TextView
                    android:id="@+id/textView19"
                    style="@style/MediumBoldAttribute"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/title_about_event_details"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvEventParticipantCount" />

                <TextView
                    android:id="@+id/tvEventQuickDescription"
                    style="@style/MediumAttribute"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView19"
                    tools:text="@string/example_quick_info_event_detail" />

                <TextView
                    android:id="@+id/tvShowMoreInformationEventDetails"
                    style="@style/HighlightedMediumAttribute"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/see_more_information_event_details"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvEventQuickDescription" />

                <TextView
                    android:id="@+id/textView21"
                    style="@style/MediumBoldAttribute"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/title_location_event_details"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvShowMoreInformationEventDetails" />

                <TextView
                    android:id="@+id/tvMapLocation"
                    style="@style/MediumAttribute"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView21"
                    tools:text="@string/example_place_event_details" />

                <com.google.android.gms.maps.MapView xmlns:map="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/mvEventLocation"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvMapLocation"
                    map:cameraZoom="13"
                    map:liteMode="true"
                    map:mapType="normal" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.circularreveal.CircularRevealFrameLayout
        android:id="@+id/organiserSheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/lightBackgroundColor"
        android:visibility="invisible"
        app:layout_anchor="@id/fabActionEventDetails"
        app:layout_anchorGravity="center"
        app:layout_behavior="@string/fab_transformation_sheet_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvOrganiserActionShowMessages"
                style="@style/OrganiserOptionItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_show_messages_event_details" />

            <TextView
                android:id="@+id/tvOrganiserActionInvitePeople"
                style="@style/OrganiserOptionItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_invite_people_event_details" />

            <TextView
                android:id="@+id/tvOrganiserActionModifyEvent"
                style="@style/OrganiserOptionItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_modify_event_event_details" />

            <TextView
                android:id="@+id/tvCloseOrganiserSheet"
                style="@style/OrganiserOptionItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_close_organiser_menu_event_details" />

        </LinearLayout>

    </com.google.android.material.circularreveal.CircularRevealFrameLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabActionEventDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/content_description_event_details_FAB"
        android:focusable="true"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>