<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/currentEventsListFragment">

    <fragment
        android:id="@+id/currentEventsListFragment"
        android:name="hu.bme.aut.android.together.ui.screen.currentevents.fragment.EventListsPagerFragment"
        android:label="fragment_current_events_list"
        tools:layout="@layout/fragment_event_lists_pager">
        <action
            android:id="@+id/action_currentEventsListFragment_to_addEventPagerFragment"
            app:destination="@id/addEventGraph" />
        <action
            android:id="@+id/action_currentEventsListFragment_to_eventDetailsFragment"
            app:destination="@id/eventDetailsGraph">
            <argument
                android:name="eventId"
                app:argType="long" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/eventQueryFragment"
        android:name="hu.bme.aut.android.together.ui.screen.searchevent.searcher.fragment.EventQueryFragment"
        android:label="fragment_event_query"
        tools:layout="@layout/fragment_event_query">
        <action
            android:id="@+id/action_eventQueryFragment_to_eventSearchResultFragment"
            app:destination="@id/eventSearchResultFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="hu.bme.aut.android.together.ui.screen.profile.fragment.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_profileFragment_to_eventInvitationsFragment"
            app:destination="@id/eventInvitationsFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="hu.bme.aut.android.together.ui.screen.profilesettings.ProfileSettingsFragment"
        android:label="SettingsFragment" />
    <fragment
        android:id="@+id/eventSearchResultFragment"
        android:name="hu.bme.aut.android.together.ui.screen.searchevent.result.fragment.EventSearchResultFragment"
        android:label="fragment_event_search_result"
        tools:layout="@layout/fragment_event_search_result" >
        <action
            android:id="@+id/action_eventSearchResultFragment_to_eventDetailsFragment"
            app:destination="@id/eventDetailsGraph">
            <argument
                android:name="eventId"
                app:argType="long" />
        </action>
        <argument
            android:name="queryParameter"
            app:argType="hu.bme.aut.android.together.ui.model.EventQueryParameter" />
    </fragment>
    <navigation android:id="@+id/eventDetailsGraph"
        app:startDestination="@id/eventDetailsFragment">
        <fragment
            android:id="@+id/eventDetailsFragment"
            android:name="hu.bme.aut.android.together.ui.screen.eventcontrol.details.fragment.EventDetailsFragment"
            android:label="fragment_event_details"
            tools:layout="@layout/fragment_event_details">
            <action
                android:id="@+id/action_eventDetailsFragment_to_eventDetailsCommunicationFragment"
                app:destination="@id/eventDetailsCommunicationFragment" />
            <action
                android:id="@+id/action_eventDetailsFragment_to_eventDetailsFullDescriptionFragment"
                app:destination="@id/eventDetailsFullDescriptionFragment" />
            <action
                android:id="@+id/action_eventDetailsFragment_to_eventInvitationSenderFragment"
                app:destination="@id/eventInvitationSenderFragment" />
            <action
                android:id="@+id/action_eventDetailsFragment_to_modifyEventDetailsFragment"
                app:destination="@id/modifyEventDetailsFragment" />
            <action
                android:id="@+id/action_eventDetailsFragment_to_eventSettingsFragment"
                app:destination="@id/eventSettingsFragment" />
            <argument
                android:name="eventId"
                app:argType="long" />
        </fragment>
        <fragment
            android:id="@+id/eventDetailsFullDescriptionFragment"
            android:name="hu.bme.aut.android.together.ui.screen.eventcontrol.wholedescription.fragment.EventWholeDescriptionFragment"
            android:label="fragment_event_details_full_description"
            tools:layout="@layout/fragment_event_details_whole_description" >
            <argument
                android:name="eventId"
                app:argType="long" />
        </fragment>
        <fragment
            android:id="@+id/eventDetailsCommunicationFragment"
            android:name="hu.bme.aut.android.together.ui.screen.eventcontrol.communication.pager.fragment.EventCommunicationPagerFragment"
            android:label="fragment_event_details_communication"
            tools:layout="@layout/fragment_event_communication_pager" >
            <action
                android:id="@+id/action_eventDetailsCommunicationFragment_to_eventQuestionsFragment"
                app:destination="@id/eventQuestionsFragment" />
            <argument
                android:name="eventId"
                app:argType="long" />
        </fragment>
        <fragment
            android:id="@+id/eventQuestionsFragment"
            android:name="hu.bme.aut.android.together.ui.screen.eventcontrol.incomingquestions.fragment.EventQuestionsFragment"
            android:label="fragment_event_questions"
            tools:layout="@layout/fragment_event_questions" >
            <argument
                android:name="eventId"
                app:argType="long" />
        </fragment>
        <fragment
            android:id="@+id/eventInvitationSenderFragment"
            android:name="hu.bme.aut.android.together.ui.screen.eventcontrol.sendinvitation.fragment.EventInvitationSenderFragment"
            android:label="fragment_event_invitation_sender"
            tools:layout="@layout/fragment_event_invitation_sender" >
            <argument
                android:name="eventId"
                app:argType="long" />
        </fragment>
        <fragment
            android:id="@+id/modifyEventDetailsFragment"
            android:name="hu.bme.aut.android.together.ui.screen.eventcontrol.modifyevent.fragment.ModifyEventDetailsFragment"
            android:label="fragment_modify_event_details"
            tools:layout="@layout/fragment_modify_event_details" >
            <argument
                android:name="eventId"
                app:argType="long" />
        </fragment>
        <fragment
            android:id="@+id/eventSettingsFragment"
            android:name="hu.bme.aut.android.together.ui.screen.eventcontrol.eventsettings.EventSettingsFragment"
            android:label="EventSettingsFragment" />
    </navigation>
    <navigation android:id="@+id/addEventGraph"
        app:startDestination="@id/addEventPagerFragment">
        <fragment
            android:id="@+id/addEventPagerFragment"
            android:name="hu.bme.aut.android.together.ui.screen.addevent.pager.fragment.AddEventPagerFragment"
            android:label="fragment_add_event_pager"
            tools:layout="@layout/fragment_add_event_pager">
            <action
                android:id="@+id/action_addEventPagerFragment_to_publicEventRuleSetterFragment"
                app:destination="@id/publicEventRuleSetterFragment" />
        </fragment>
        <fragment
            android:id="@+id/publicEventRuleSetterFragment"
            android:name="hu.bme.aut.android.together.ui.screen.addevent.pagerelement.detailsetter.participant.rulesetter.fragment.PublicEventRuleSetterFragment"
            android:label="fragment_public_event_rule_setter"
            tools:layout="@layout/fragment_public_event_rule_setter">
            <action
                android:id="@+id/action_publicEventRuleSetterFragment_to_publicEventParticipantQuantifierFragment"
                app:destination="@id/publicEventParticipantQuantifierFragment" />
            <argument
                android:name="options"
                app:argType="hu.bme.aut.android.together.ui.model.EventPublicRuleOptions" />
        </fragment>
        <fragment
            android:id="@+id/publicEventParticipantQuantifierFragment"
            android:name="hu.bme.aut.android.together.ui.screen.addevent.pagerelement.detailsetter.participant.quantifier.fragment.PublicEventParticipantQuantifierFragment"
            android:label="fragment_public_event_participant_quantifier"
            tools:layout="@layout/fragment_public_event_participant_quantifier" />
        <action
            android:id="@+id/action_global_eventDetailsGraph"
            app:destination="@id/eventDetailsGraph"
            app:popUpTo="@id/currentEventsListFragment">
            <argument
                android:name="eventId"
                app:argType="long" />
        </action>
    </navigation>
    <fragment
        android:id="@+id/eventInvitationsFragment"
        android:name="hu.bme.aut.android.together.ui.screen.incomiginvitations.fragment.IncomingEventInvitationsFragment"
        android:label="fragment_event_invitations"
        tools:layout="@layout/fragment_incoming_event_invitations" />
</navigation>