<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/actionOrganiserEventSettings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/title_organiser_event_settings"
        app:showAsAction="ifRoom"/>
</menu>